--- a/pair.html
+++ b/pair.html
@@ -265,7 +265,7 @@ button:hover::before {
     <div class="whatsapp-icon">
       <i class="fab fa-whatsapp"></i>
     </div>
-    <h2>DEVIL-MD PAIRING</h2>
+    <h2>CHALAH-MD PAIRING</h2>
     <p>Enter your WhatsApp number with country code to generate a secure pairing code for Mini Bot</p>
     <input placeholder="+94705209559" type="number" id="number" />
     <button id="submit">Generate Session Code</button>
