--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DEVIL-MD - Login Options</title>
+  <title>CHALAH- Login Options</title>
   <style>
     * {
       margin: 0;
@@ -368,7 +368,7 @@
   margin-right: auto;
 ">
   <!-- YouTube -->
-  <a href="https://www.youtube.com/@devil-programer99" target="_blank" style="width: 100%; text-decoration: none;">
+  <a href="" target="_blank" style="width: 100%; text-decoration: none;">
     <button style="
       width: 100%;
       padding: 14px;
