--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
   margin-right: auto;
 ">
   <!-- YouTube -->
-  <a href="" target="_blank" style="width: 100%; text-decoration: none;">
+  <a href="https://www.youtube.com/@CHLAHMD" target="_blank" style="width: 100%; text-decoration: none;">
     <button style="
       width: 100%;
       padding: 14px;
